crates/ars-components/src/selection/combobox/snapshots/ars_components__selection__combobox__tests__combobox_trigger_disabled.snap
---
source: crates/ars-components/src/selection/combobox/mod.rs
expression: snapshot_attrs(&api.trigger_attrs())
---
[
    (
        Data(
            "ars-part",
        ),
        String(
            "trigger",
        ),
    ),
    (
        Data(
            "ars-scope",
        ),
        String(
            "combobox",
        ),
    ),
    (
        Aria(
            Label,
        ),
        String(
            "Show suggestions",
        ),
    ),
    (
        Aria(
            Controls,
        ),
        String(
            "disabled-content",
        ),
    ),
    (
        TabIndex,
        String(
            "-1",
        ),
    ),
    (
        Disabled,
        Bool(
            true,
        ),
    ),
    (
        Type,
        String(
            "button",
        ),
    ),
]
